--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apollo-server-integration-testing-fastify",
-  "version": "1.0.0-rc1",
+  "version": "1.0.0",
   "description": "Test helper for writing apollo-server integration tests",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
