--- a/package.json
+++ b/package.json
@@ -25,16 +25,16 @@
     "release": "smooth-release"
   },
   "devDependencies": {
-    "smooth-release": "^8.0.9",
-    "typescript": "^3.7.3",
+    "apollo-server-fastify": "^2.14.2",
     "fastify": "^2.13.1",
-    "apollo-server-fastify": "^2.13.1",
-    "graphql": "^14.6.0"
+    "graphql": "^14.6.0",
+    "smooth-release": "^8.0.9",
+    "typescript": "^3.9.5"
   },
   "peerDependencies": {
-    "graphql": "^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0",
     "apollo-server-fastify": ">= 2 || < 3",
-    "fastify": ">= 2 || < 3"
+    "fastify": ">= 2 || < 3",
+    "graphql": "^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0"
   },
   "files": [
     "dist"
