--- a/package.json
+++ b/package.json
@@ -20,21 +20,23 @@
   "scripts": {
     "clean": "rm -rf dist/",
     "compile": "tsc",
-    "prepublish": "yarn clean && yarn compile",
+    "prepublish": "pnpm clean && pnpm compile",
     "dev": "tsc --watch",
-    "release": "np"
+    "release": "release-it --only-version"
   },
   "devDependencies": {
-    "apollo-server-fastify": "^3.0.1",
-    "fastify": "^3.19.1",
-    "graphql": "^16.4.0",
-    "np": "^7.5.0",
-    "typescript": "^4.3.5"
+    "@apollo/server": "^4.4.0",
+    "@as-integrations/fastify": "^1.3.0",
+    "fastify": "^4.13.0",
+    "graphql": "^16.6.0",
+    "release-it": "^15.6.0",
+    "typescript": "^4.9.5"
   },
   "peerDependencies": {
-    "apollo-server-fastify": ">= 3",
-    "fastify": ">= 3",
-    "graphql": "^15.3.0 || ^16.4.0"
+    "@apollo/server": ">= 4, < 5",
+    "@as-integrations/fastify": "1.*",
+    "fastify": ">= 4, <5",
+    "graphql": "^16.6.0"
   },
   "files": [
     "dist"
