--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apollo-server-integration-testing-fastify",
-  "version": "2.1.0",
+  "version": "3.0.0-alpha.0",
   "description": "Test helper for writing apollo-server integration tests using Fastify",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
